methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  var VuBiscuit: Boolean = false
  for (k<-1 to 6) {
    avance()
    if (estSurBiscuit==true) {
      VuBiscuit=true
    }
  }
}
